cmake_minimum_required (VERSION 3.7)
project (ncursesThings)
set(CMAKE_BUILD_TYPE Debug)
set (CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
find_package( Curses REQUIRED )
include_directories( ${CURSES_INCLUDE_DIRS} )
add_executable( main main.cpp Room.cpp Level.cpp Tile.cpp Actor.cpp GameController.cpp InputController.cpp InputMode.cpp LevelController.cpp Player.cpp)
target_link_libraries( main ${CURSES_LIBRARIES} )
